test/FAIL/assertcmd/invalid_arguments/17_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

assert word 15 $01